--- a/ansibleOpen/tests/tesO.yml
+++ b/ansibleOpen/tests/tesO.yml
@@ -14,7 +14,7 @@
 
     - name: Deletando uma imagem...
       os_image:
-        auth: "{{ openstack_authentication }}"
+        #auth: "{{ openstack_authentication }}"
         name: teste
         state: absent
 
