--- a/ansibleOpen/tests/tesO.yml
+++ b/ansibleOpen/tests/tesO.yml
@@ -22,7 +22,7 @@
       os_server:
         state: present
         #auth: "{{ openstack_authentication }}"
-        name: ansible-sabe-criar-vm
+        name: ansible-sabe-criar-vm-awx
         image: 54db790a-760c-4862-8ceb-d809191a7418
         key_name: ansible
         timeout: 200
