--- a/ansibleOpen/tests/tesO.yml
+++ b/ansibleOpen/tests/tesO.yml
@@ -2,20 +2,20 @@
 - name: OpenStack
   hosts: localhost
   vars:
-    proxy_env:
-      http_proxy: http://limachado:Leitinha15@proxylatam.indra.es:8080
+    #proxy_env:
+     # http_proxy: http://limachado:Leitinha15@proxylatam.indra.es:8080
   gather_facts: False
 
   tasks:
 
     - name: Deletando uma imagem...
-      environment: "{{proxy_env}}"
+      #environment: "{{proxy_env}}"
       os_image:
         name: teste
         state: absent
 
     - name: Criando uma instância...
-      environment: "{{proxy_env}}"
+      #environment: "{{proxy_env}}"
       os_server:
         state: present
         name: ansible-sabe-criar-vm
